; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/user32/extr_msg.c_get_input_codepage.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/user32/extr_msg.c_get_input_codepage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOCALE_IDEFAULTANSICODEPAGE = common dso_local global i32 0, align 4
@LOCALE_RETURN_NUMBER = common dso_local global i32 0, align 4
@CP_ACP = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @get_input_codepage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_input_codepage() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = call i32 @GetKeyboardLayout(i32 0)
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @LOWORD(i32 %5)
  %7 = load i32, i32* @LOCALE_IDEFAULTANSICODEPAGE, align 4
  %8 = load i32, i32* @LOCALE_RETURN_NUMBER, align 4
  %9 = or i32 %7, %8
  %10 = bitcast i64* %1 to i32*
  %11 = call i32 @GetLocaleInfoW(i32 %6, i32 %9, i32* %10, i32 2)
  store i32 %11, i32* %2, align 4
  %12 = load i32, i32* %2, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %16, label %14

14:                                               ; preds = %0
  %15 = load i64, i64* @CP_ACP, align 8
  store i64 %15, i64* %1, align 8
  br label %16

16:                                               ; preds = %14, %0
  %17 = load i64, i64* %1, align 8
  ret i64 %17
}

declare dso_local i32 @GetKeyboardLayout(i32) #1

declare dso_local i32 @GetLocaleInfoW(i32, i32, i32*, i32) #1

declare dso_local i32 @LOWORD(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
